chore: Java feature tests